[package]
name = "wifi-connection-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"]}
anyhow = "1.0.68"

ping = "0.4.0"
base64 = "0.21.0"

log4rs = "1.2.0"
log = "0.4.17"
function_name = "0.3.0"
